--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   },
   "keywords": [],
   "author": "Genilson fernandes",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "pg": "^8.11.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.17"
+  }
 }
