--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
         "@typescript-eslint/eslint-plugin": "^5.60.0",
         "@typescript-eslint/parser": "^5.60.0",
         "eslint": "^8.43.0",
+        "eslint-config-prettier": "^8.8.0",
         "eslint-config-standard-with-typescript": "^35.0.0",
         "eslint-plugin-import": "^2.25.2",
         "eslint-plugin-n": "^15.0.0",
+        "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-promise": "^6.0.0",
         "nodemon": "^2.0.22",
         "prettier": "^2.8.8",
