--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
-	"name": "api-rest-typescript",
-	"version": "1.0.0",
-	"main": "index.js",
-	"license": "MIT",
-	"scripts": {
-		"dev": "nodemon --exec ts-node ./src/index.ts",
-		"migration:generate": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:generate ./src/migrations/default",
-		"migration:run": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:run",
-		"build": "rm -rf ./dist && tsc",
-		"start": "node ./dist/index.js"
-	},
-	"devDependencies": {
-		"@types/express": "^4.17.13",
-		"@types/node": "^18.0.1",
-		"nodemon": "^2.0.19",
-		"ts-node": "^10.8.2",
-		"typescript": "^4.7.4"
-	},
-	"dependencies": {
-		"dotenv": "^16.0.1",
-		"express": "^4.18.1",
-		"express-async-errors": "^3.1.1",
-		"pg": "^8.7.3",
-		"reflect-metadata": "^0.1.13",
-		"typeorm": "^0.3.7"
-	}
+  "name": "todocollection_api",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "dev": "nodemon --exec ts-node ./src/index.ts",
+    "migration:generate": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:generate ./src/migrations/default",
+    "migration:run": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:run",
+    "lint": "eslint src --max-warnings=0",
+    "format": "prettier --write ."
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "eslint": "^8.43.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.19",
+    "prettier": "^2.8.8",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.7"
+  }
 }
