--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.7'
 services:
   db:
-    container_name: rent-api-db-container
+    container_name: todo_api
     image: postgres:13
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
-      POSTGRES_DB: rent_api
+      POSTGRES_DB: todo_api
     ports:
       - 5432:5432
