--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon --exec ts-node ./src/index.ts",
     "migration:generate": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:generate ./src/migrations/default",
     "migration:craete": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:create ./src/migrations/default",
+    "migration:revert": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:revert",
     "migration:run": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:run",
     "lint": "eslint src --max-warnings=0",
     "format": "prettier --write ."
