--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "eslint": "^8.43.0",
@@ -35,6 +36,7 @@
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.7",
     "yup": "^1.2.0"
   }
